--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,8 @@ figcaption a {
 	width: 95%;
 	max-width: 1280px;
 /* USE THIS FOR DISABLING HEADER FOR EDITING TEXT, Also enable colors below! */
-	display: none; */
+	/* display: none; */
+
 }
 .nav {
 	padding: 1px;
@@ -801,7 +802,7 @@ p {
 }
 
 /* Activate the classes below for editing in Kompozer.  Also de-activate the Nav */
-
+/*
 .A-tv {
 	background: black;
 	color: red;
