--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,9 @@ body {
 	font-family: arial, Times New Roman, Times, serif;
 	font-size: 1.2rem;
 	color: #cdd2ea;
-    text-shadow: 0 0 2px black;
+	text-shadow: 0 0 2px black;
+/* USE THE LINE OF TEXT BELOW TO MAKE IT EASY TO EDIT ON KOMPOZER.  ALSO SEE NAV AND COLORS BELOW*/
+	/* max-width: 2280px;  */
 }
 hr {
 	width: 50%;
@@ -98,8 +100,8 @@ figcaption a {
 	border-radius: 20px;
 	width: 95%;
 	max-width: 1280px;
-/* USE THIS FOR DISABLING HEADER FOR EDITING TEXT, Also enable colors below! */
-/*	display: none; */
+/* USE THIS FOR DISABLING HEADER FOR EDITING TEXT, Also enable wide screen Body above and Colors below! */
+	/* display: none; */
 }
 .nav {
 	padding: 1px;
@@ -297,8 +299,6 @@ td {
 
 }
 
-
-
 tr:nth-child(even) td {
 }
 tr:nth-child(odd) td {
@@ -306,7 +306,6 @@ tr:nth-child(odd) td {
 caption {
   padding: 10px;
 }
-
 
 .table {
 	line-height: 1.4rem;
@@ -800,7 +799,7 @@ p {
 	text-align: center;
 }
 
-/* Activate the classes below for editing in Kompozer.  Also de-activate the Nav */
+/* Activate the classes below for editing in Kompozer.  Also activate wide screen Body & de-activate the Nav */
 /*
 .A-tv {
 	background: black;
