government stuff updated

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,8 @@ body {
 	font-size: 1.2rem;
 	color: #cdd2ea;
 	text-shadow: 0 0 2px black;
-/* USE THE LINE OF TEXT BELOW TO MAKE IT EASY TO EDIT ON KOMPOZER.  ALSO SEE NAV AND COLORS BELOW*/
-	/* max-width: 2280px;  */
+/* USE THE LINE OF TEXT BELOW TO MAKE IT EASY TO EDIT ON KOMPOZER. 321  ALSO SEE NAV AND COLORS BELOW*/
+	/* max-width: 2280px;  */ */
 }
 hr {
 	width: 50%;
@@ -100,8 +100,8 @@ figcaption a {
 	border-radius: 20px;
 	width: 95%;
 	max-width: 1280px;
-/* USE THIS FOR DISABLING HEADER FOR EDITING TEXT, Also enable wide screen Body above and Colors below! */
-	/* display: none; */
+/* USE THIS FOR DISABLING HEADER FOR EDITING TEXT, 321 Also enable wide screen Body above and Colors below! */
+	/* display: none; */ */
 }
 .nav {
 	padding: 1px;
@@ -282,7 +282,8 @@ td, th {
 	padding: 10px 20px;
 	/*	border: solid 4px #cdd2ea;
 	border-radius: 20px;  
-		background: radial-gradient(black, #6C6BD0);
+					background: radial-gradient(black, #6C6BD0);
+
 		background: radial-gradient(#6C6BD0, black);
 		*/
 }
@@ -799,7 +800,7 @@ p {
 }
 
 /* Activate the classes below for editing in Kompozer.  Also activate wide screen Body & de-activate the Nav */
- /*
+/*  
 .A-tv {
 	background: black;
 	color: red;
