--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 	color: #cdd2ea;
 	text-shadow: 0 0 2px black;
 /* USE THE LINE OF TEXT BELOW TO MAKE IT EASY TO EDIT ON KOMPOZER. 321  ALSO SEE NAV AND COLORS BELOW*/
-	  /* max-width: 2280px;  */  
+/*	   max-width: 2280px;  */  
 }
 hr {
 	width: 50%;
@@ -445,7 +445,7 @@ p {
 	margin-bottom: 2rem;
 }
 .section {
-	margin: 0 6rem 1rem 6rem;
+	margin: 0 0 1rem 0;
 }
 .box {
 	margin: 1rem auto;
@@ -464,6 +464,22 @@ p {
 .box li {
 	padding-bottom: .5rem;
 }
+
+.langbox {
+	font-weight: bold; 
+	font-size: 80px; 
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+	min-height: 106px;
+}
+
+.flex-container {
+    display: flex;
+}
+
 .indexlinks {
 	padding-top: 1rem;
 }
@@ -807,8 +823,8 @@ p {
 }
 
 /* Activate the classes below for editing in Kompozer. 321 Also activate wide screen Body & de-activate the Nav */
- 
-/* .A-tv {
+ /*
+ .A-tv {
 	background: black;
 	color: red;
 }
